setup skeleton site

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>EDUC 641: Inferences and Statistics in Education</title>
+<title>About this site</title>
 
 <script src="site_libs/header-attrs-2.8/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -59,7 +59,6 @@ if (window.hljs) {
 
 
 
-<link rel="stylesheet" href="educquant.css" type="text/css" />
 
 
 
@@ -273,21 +272,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">EDUC 641: Inferences and Statistics in Education</h1>
+<h1 class="title toc-ignore">About this site</h1>
 
 </div>
 
 
-<p>Welcome to Fall 2021 EDUC 641.</p>
-<p>This is the first course of the EDUC quantitative methods sequence. In this course, you will learn:</p>
-<p>Types of variables (manipulation of variable types; transformations)<br />
-Visualization of central tendency and variability<br />
-Central limit theorem<br />
-Inferential stats for different type of variables (t distributions, F distributions, Chi-squared distributions)<br />
-Bayesian perspectives<br />
-Related principles of programming<br />
-Power analyses and effect sizes<br />
-[Statistics they will be able to calculate: e.g., t-tests for two-group comparisons and correlations, F-tests for two-group comparisons, chi-squared contingency analyses]</p>
+
 
 
 
