--- a/schedule.html
+++ b/schedule.html
@@ -11,7 +11,7 @@
 
 
 
-<title>EDUC 641: Inferences and Statistics in Education</title>
+<title>EDUC 641 Schedule</title>
 
 <script src="site_libs/header-attrs-2.8/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -273,21 +273,28 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">EDUC 641: Inferences and Statistics in Education</h1>
+<h1 class="title toc-ignore">EDUC 641 Schedule</h1>
 
 </div>
 
 
-<p>Welcome to Fall 2021 EDUC 641.</p>
-<p>This is the first course of the EDUC quantitative methods sequence. In this course, you will learn:</p>
-<p>Types of variables (manipulation of variable types; transformations)<br />
-Visualization of central tendency and variability<br />
-Central limit theorem<br />
-Inferential stats for different type of variables (t distributions, F distributions, Chi-squared distributions)<br />
-Bayesian perspectives<br />
-Related principles of programming<br />
-Power analyses and effect sizes<br />
-[Statistics they will be able to calculate: e.g., t-tests for two-group comparisons and correlations, F-tests for two-group comparisons, chi-squared contingency analyses]</p>
+<div id="week-1" class="section level3">
+<h3>Week 1</h3>
+<p>Date:</p>
+<p>Topics:</p>
+<p>Objectives:</p>
+<ol style="list-style-type: decimal">
+<li></li>
+<li></li>
+<li></li>
+</ol>
+<p>Readings:</p>
+<p>Assignments Due:</p>
+<p>Slides: <a href="./slides/w01.html">download .html</a></p>
+</div>
+<div id="week-2" class="section level3">
+<h3>Week 2</h3>
+</div>
 
 
 
