--- a/exams.html
+++ b/exams.html
@@ -11,7 +11,7 @@
 
 
 
-<title>EDUC 641 Syllabus</title>
+<title>EDUC 641 Exams</title>
 
 <script src="site_libs/header-attrs-2.8/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -273,99 +273,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">EDUC 641 Syllabus</h1>
+<h1 class="title toc-ignore">EDUC 641 Exams</h1>
 
 </div>
 
 
-<div id="general-course-information" class="section level3">
-<h3>General Course Information</h3>
-</div>
-<div id="course-overview" class="section level3">
-<h3>Course Overview</h3>
-</div>
-<div id="student-learning-outcomes" class="section level3">
-<h3>Student Learning Outcomes</h3>
-</div>
-<div id="textbooks-and-reading-materials" class="section level3">
-<h3>Textbooks and Reading Materials</h3>
-</div>
-<div id="weekly-schedule-of-topics-assignments-and-readings-option-1" class="section level3">
-<h3>Weekly Schedule of Topics, Assignments, and Readings (option 1)</h3>
-<table style="width:99%;">
-<colgroup>
-<col width="16%" />
-<col width="23%" />
-<col width="29%" />
-<col width="29%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td>Week</td>
-<td>Topics</td>
-<td>Readings</td>
-<td>Assignments Due</td>
-</tr>
-<tr class="even">
-<td>Week 1</td>
-<td>Introduction</td>
-<td><ul>
-<li>Text1 p.1-15</li>
-<li>Text2 p.1-9</li>
-</ul></td>
-<td><div class="line-block">Assignment 1<br />
-</div></td>
-</tr>
-</tbody>
-</table>
-</div>
-<div id="weekly-schedule-of-topics-assignments-and-readings-option-2" class="section level3">
-<h3>Weekly Schedule of Topics, Assignments, and Readings (option 2)</h3>
-<div id="week-1" class="section level4">
-<h4>Week 1</h4>
-<p>Topics:</p>
-<p>Readings:</p>
-<ul>
-<li>Text1 p.1-15<br />
-</li>
-<li>Text2 p.1-9</li>
-</ul>
-<p>Assignments Due:</p>
-</div>
-</div>
-<div id="grading-components-and-criteria" class="section level3">
-<h3>Grading Components and Criteria</h3>
-</div>
-<div id="role-of-the-ges" class="section level3">
-<h3>Role of the GEs</h3>
-</div>
-<div id="student-engagement-inventory" class="section level3">
-<h3>Student Engagement Inventory</h3>
-</div>
-<div id="attendance-and-absence-guidelines" class="section level3">
-<h3>Attendance and Absence Guidelines</h3>
-</div>
-<div id="expected-classroom-behavior" class="section level3">
-<h3>Expected Classroom Behavior</h3>
-</div>
-<div id="diversity-equity-and-inclusion" class="section level3">
-<h3>Diversity, Equity, and Inclusion</h3>
-</div>
-<div id="indigenous-recognition-statement" class="section level3">
-<h3>Indigenous Recognition Statement</h3>
-</div>
-<div id="using-pronouns-and-personal-preference" class="section level3">
-<h3>Using Pronouns and Personal Preference</h3>
-</div>
-<div id="your-well-being" class="section level3">
-<h3>Your Well-being</h3>
-</div>
-<div id="reporting-obligations" class="section level3">
-<h3>Reporting Obligations</h3>
-</div>
-<div id="more-per-university-requirements" class="section level3">
-<h3>More per university requirements…</h3>
-</div>
+
 
 
 
