--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -259,10 +257,7 @@ $(document).ready(function () {
   <a href="exams.html">Exams</a>
 </li>
 <li>
-  <a href="https://uo-educ-quant.github.io/641/">
-    <span class="fas fa-github"></span>
-     
-  </a>
+  <a href="https://uo-educ-quant.github.io/641/">Course Repo</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
