--- a/LICENSE.html
+++ b/LICENSE.html
@@ -256,10 +256,7 @@ $(document).ready(function () {
   <a href="exams.html">Exams</a>
 </li>
 <li>
-  <a href="https://uo-educ-quant.github.io/641/">
-    <span class="fas fa-github"></span>
-     
-  </a>
+  <a href="https://uo-educ-quant.github.io/641/">Repo</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
