--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ $(document).ready(function () {
   <a href="exams.html">Exams</a>
 </li>
 <li>
-  <a href="https://uo-educ-quant.github.io/641/">Course Repo</a>
+  <a href="https://uo-educ-quant.github.io/641/">Repo</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
