--- a/syllabus.html
+++ b/syllabus.html
@@ -257,7 +257,7 @@ $(document).ready(function () {
   <a href="exams.html">Exams</a>
 </li>
 <li>
-  <a href="https://uo-educ-quant.github.io/641/">Repo</a>
+  <a href="https://github.com/uo-educ-quant/641">Repo</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
