--- a/assignments.html
+++ b/assignments.html
@@ -273,7 +273,51 @@ $(document).ready(function () {
 </div>
 
 
-
+<div id="introduction" class="section level3">
+<h3>1. Introduction</h3>
+<p>(from syllabus)</p>
+<p>(My suggestion is that responses identical to other people’s words will result a warning for the first time, then zero point if this happens again; another suggestion is that we want to make sure that students render their html/pdf from Rmd/R file, so if not, cut some points. These may seem harsh in the beginning but will make sure student writing “runnable” codes as well as their own answers - two things that are fundamental to their success in later weeks)</p>
+</div>
+<div id="submission-requirments" class="section level3">
+<h3>2. Submission Requirments</h3>
+<p>For each assignment, please upload below two files on Canvas before deadline:</p>
+<ul>
+<li>An .html or .pdf file that includes both -
+<ul>
+<li>your typed responses (in your own words and not identical to anybody else’s), tables, and/or figures to the problems<br />
+</li>
+<li>and the R code chunks that generated your answers (hint: in your Rmd file, set up echo = TRUE, include = TRUE)</li>
+</ul></li>
+<li>The .Rmd or .R file that you used to render the tables and figures in the above html/pdf. You’ll be cut TBD points if the Rmd doesn’t run or render properly.</li>
+</ul>
+</div>
+<div id="details-about-assignments" class="section level3">
+<h3>3. Details about Assignments</h3>
+<div id="assignment-1" class="section level4">
+<h4>3.1. Assignment 1</h4>
+<p>Categorical data 1: data structure and descriptives</p>
+<p>Deadline: TBD</p>
+<p>Download: <a href="./assignments/assignment01.html">html file</a>; <a href="">key html file</a>, <a href="">key Rmd file</a></p>
+</div>
+<div id="assignment-2" class="section level4">
+<h4>3.2. Assignment 2</h4>
+<p>Categorical data 2: chi-square analysis</p>
+<p>Deadline: TBD</p>
+<p>Download: <a href="./assignments/assignment02.html">html file</a>; <a href="">key html file</a>, <a href="">key Rmd file</a></p>
+</div>
+<div id="assignment-3" class="section level4">
+<h4>3.3. Assignment 3</h4>
+<p>Continuous data 1: correlation and t-tests</p>
+</div>
+<div id="assignment-4" class="section level4">
+<h4>3.4. Assignment 4</h4>
+<p>Continuous data 2: intro to bivariate regression</p>
+</div>
+<div id="assignment-5" class="section level4">
+<h4>3.5. Assignment 5</h4>
+<p>Final assignment</p>
+</div>
+</div>
 
 
 
