--- a/schedule.html
+++ b/schedule.html
@@ -273,22 +273,37 @@ $(document).ready(function () {
 </div>
 
 
-<div id="week-1" class="section level3">
-<h3>Week 1</h3>
-<p>Date:</p>
-<p>Topics:</p>
-<p>Objectives:</p>
-<ol style="list-style-type: decimal">
-<li></li>
-<li></li>
-<li></li>
-</ol>
-<p>Readings:</p>
-<p>Assignments Due:</p>
-<p>Slides: <a href="./slides/w01.html">download .html</a></p>
-</div>
 <div id="week-2" class="section level3">
 <h3>Week 2</h3>
+<p>Date: TBD</p>
+<p>Topic: Summarizing and displaying categorical data</p>
+<p>Objectives:</p>
+<ul>
+<li>Understand and implement principles of tabular data in R</li>
+<li>Describe and summarize quantitative data that are categorical</li>
+<li>Create visualizations of quantitative data that are categorical</li>
+<li>Write R scripts to conduct these analyses</li>
+</ul>
+<p>Readings: TBD</p>
+<p>Assignment: Due TBD; <a href="./assignments/assignment01.html">html file</a>; <a href="">key html file</a>, <a href="">key Rmd file</a></p>
+<p>Lecture slides: <a href="./slides/EDUC641_2_categ_1.html">html file</a>, <a href="./slides/EDUC641_2_categ_1.Rmd">Rmd file</a></p>
+</div>
+<div id="week-3" class="section level3">
+<h3>Week 3</h3>
+<p>Date: TBD</p>
+<p>Topic: Examining the relationship between categorical variables</p>
+<p>Objectives:</p>
+<ul>
+<li>Describe relationships between quantitative data that are categorical</li>
+<li>Calculate an index of the strength of the relationship between two categorical variables, the chi-squared ( <span class="math inline">\(\chi^2\)</span>) statistic</li>
+<li>Write R scripts to conduct these analyses</li>
+<li>Formulate and describe the purpose of a null hypothesis</li>
+<li>Conceptually describe the criteria to make a statistical inference from a sample to a population</li>
+<li>Interpret and report the results of a contingency-table analysis and a statistical inference from a chi-squared statistic</li>
+</ul>
+<p>Readings: TBD</p>
+<p>Assignment: Due TBD; <a href="./assignments/assignment02.html">html file</a>; <a href="">key html file</a>, <a href="">key Rmd file</a></p>
+<p>Lecture slides: <a href="./slides/EDUC641_2_categ_2.html">html file</a>, <a href="./slides/EDUC641_2_categ_2.Rmd">Rmd file</a></p>
 </div>
 
 
