--- a/syllabus.html
+++ b/syllabus.html
@@ -285,48 +285,8 @@ $(document).ready(function () {
 <div id="textbooks-and-reading-materials" class="section level3">
 <h3>Textbooks and Reading Materials</h3>
 </div>
-<div id="weekly-schedule-of-topics-assignments-and-readings-option-1" class="section level3">
-<h3>Weekly Schedule of Topics, Assignments, and Readings (option 1)</h3>
-<table style="width:99%;">
-<colgroup>
-<col width="16%" />
-<col width="23%" />
-<col width="29%" />
-<col width="29%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td>Week</td>
-<td>Topics</td>
-<td>Readings</td>
-<td>Assignments Due</td>
-</tr>
-<tr class="even">
-<td>Week 1</td>
-<td>Introduction</td>
-<td><ul>
-<li>Text1 p.1-15</li>
-<li>Text2 p.1-9</li>
-</ul></td>
-<td><div class="line-block">Assignment 1<br />
-</div></td>
-</tr>
-</tbody>
-</table>
-</div>
-<div id="weekly-schedule-of-topics-assignments-and-readings-option-2" class="section level3">
-<h3>Weekly Schedule of Topics, Assignments, and Readings (option 2)</h3>
-<div id="week-1" class="section level4">
-<h4>Week 1</h4>
-<p>Topics:</p>
-<p>Readings:</p>
-<ul>
-<li>Text1 p.1-15<br />
-</li>
-<li>Text2 p.1-9</li>
-</ul>
-<p>Assignments Due:</p>
-</div>
+<div id="weekly-schedule" class="section level3">
+<h3>Weekly <a href="./schedule.html">Schedule</a></h3>
 </div>
 <div id="grading-components-and-criteria" class="section level3">
 <h3>Grading Components and Criteria</h3>
