--- a/assignments.html
+++ b/assignments.html
@@ -297,13 +297,13 @@ $(document).ready(function () {
 <h4>3.1. Assignment 1</h4>
 <p>Categorical data 1: data structure and descriptives</p>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment01.html">html file</a>; <a href="">key html file</a>, <a href="">key Rmd file</a></p>
+<p>Download: <a href="./assignments/assignment01.html">html file</a></p>
 </div>
 <div id="assignment-2" class="section level4">
 <h4>3.2. Assignment 2</h4>
 <p>Categorical data 2: chi-square analysis</p>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment02.html">html file</a>; <a href="">key html file</a>, <a href="">key Rmd file</a></p>
+<p>Download: <a href="./assignments/assignment02.html">html file</a></p>
 </div>
 <div id="assignment-3" class="section level4">
 <h4>3.3. Assignment 3</h4>
