--- a/schedule.html
+++ b/schedule.html
@@ -285,7 +285,7 @@ $(document).ready(function () {
 <li>Write R scripts to conduct these analyses</li>
 </ul>
 <p>Readings: TBD</p>
-<p>Assignment: Due TBD; <a href="./assignments/assignment01.html">html file</a>; <a href="">key html file</a>, <a href="">key Rmd file</a></p>
+<p>Assignment: Due TBD; <a href="./assignments/assignment01.html">html file</a></p>
 <p>Lecture slides: <a href="./slides/EDUC641_2_categ_1.html">html file</a>, <a href="./slides/EDUC641_2_categ_1.Rmd">Rmd file</a></p>
 </div>
 <div id="week-3" class="section level3">
@@ -302,7 +302,7 @@ $(document).ready(function () {
 <li>Interpret and report the results of a contingency-table analysis and a statistical inference from a chi-squared statistic</li>
 </ul>
 <p>Readings: TBD</p>
-<p>Assignment: Due TBD; <a href="./assignments/assignment02.html">html file</a>; <a href="">key html file</a>, <a href="">key Rmd file</a></p>
+<p>Assignment: Due TBD; <a href="./assignments/assignment02.html">html file</a></p>
 <p>Lecture slides: <a href="./slides/EDUC641_2_categ_2.html">html file</a>, <a href="./slides/EDUC641_2_categ_2.Rmd">Rmd file</a></p>
 </div>
 
