--- a/slides/EDUC641_2_categ_2.html
+++ b/slides/EDUC641_2_categ_2.html
@@ -33,7 +33,7 @@ class: center, middle, inverse, title-slide
 # Goals of the unit
 
 - Describe relationships between quantitative data that are categorical
-- Calculate an index of the strength of the relationship between two categorical variables, the chi-squared ( `\(\chi^2\)`) statistic
+- Calculate an index of the strength of the relationship between two categorical variables, the chi-squared ($\chi^2$) statistic
 - Write R scripts to conduct these analyses
 - Formulate and describe the purpose of a null hypothesis
 - Conceptually describe the criteria to make a statistical inference from a sample to a population
