--- a/slides/EDUC641_2_categ_2.html
+++ b/slides/EDUC641_2_categ_2.html
@@ -4,7 +4,7 @@
     <title>Examining the relationship between categorical variables</title>
     <meta charset="utf-8" />
     <meta name="author" content="TBD" />
-    <script src="EDUC641_2_categ_2_files/header-attrs-2.8/header-attrs.js"></script>
+    <script src="EDUC641_2_categ_2_files/header-attrs-2.9/header-attrs.js"></script>
     <link href="EDUC641_2_categ_2_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link rel="stylesheet" href="new.css" type="text/css" />
   </head>
@@ -20,10 +20,9 @@ class: center, middle, inverse, title-slide
 
 
 
-
 # Roadmap
 
-![](roadmap.png)
+&lt;img src="roadmap_2.png" width="90%" style="display: block; margin: auto;" /&gt;
                                                           
 ---
 # A reminder of our motivating question
@@ -33,7 +32,7 @@ class: center, middle, inverse, title-slide
 # Goals of the unit
 
 - Describe relationships between quantitative data that are categorical
-- Calculate an index of the strength of the relationship between two categorical variables, the chi-squared ($\chi^2$) statistic
+- Calculate an index of the strength of the relationship between two categorical variables, the chi-squared ( `\(\chi^2\)`) statistic
 - Write R scripts to conduct these analyses
 - Formulate and describe the purpose of a null hypothesis
 - Conceptually describe the criteria to make a statistical inference from a sample to a population
@@ -110,7 +109,7 @@ ggplot(df, aes(x = rvictim,
         xlab("Race of victim") 
 ```
 
-&lt;img src="EDUC641_2_categ_2_files/figure-html/unnamed-chunk-4-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_2_categ_2_files/figure-html/unnamed-chunk-5-1.svg" style="display: block; margin: auto;" /&gt;
 
 ---
 # What is "related"?
