Large scale update to get synch set-up correct

--- a/slides/EDUC641_2_categ_1.html
+++ b/slides/EDUC641_2_categ_1.html
@@ -43,7 +43,7 @@ class: center, middle, inverse, title-slide
 - McCleskey executed in Georgia (1991)
 ]
 .pull-right[
-&lt;img src="mccleskey.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="mccleskey.png" width="1848" style="display: block; margin: auto;" /&gt;
 - Baldus, Pulaski &amp; Woodworth (1983). A comparative review of death sentences: An empirical study of the Georgia experience. *J. Crim Law.*
 
 ]
@@ -70,7 +70,7 @@ class: center, middle, inverse, title-slide
 
 
 ```r
-df &lt;- read.csv("Datasets/deathpenalty.csv")
+df &lt;- read.csv(here("data/deathpenalty.csv"))
 # it is common in R to name our datasets short names 
 # so as to reduce typing (df for dataframe)
 
