Update dir structure

--- a/slides/EDUC641_2_categ_1.html
+++ b/slides/EDUC641_2_categ_1.html
@@ -22,7 +22,7 @@ class: center, middle, inverse, title-slide
 
 # Roadmap
 
-&lt;img src="roadmap_1.png" width="80%" style="display: block; margin: auto;" /&gt;
+&lt;img src="C:/Users/daviddl/OneDrive - University Of Oregon/Courses/EDUC/641/slides/Roadmap_1.png" width="80%" style="display: block; margin: auto;" /&gt;
 
 &lt;span style="color:blue"&gt; *This unit borrows heavily (with permission) from John B. Willett's course S-010Y* &lt;/span&gt;
 
@@ -43,7 +43,7 @@ class: center, middle, inverse, title-slide
 - McCleskey executed in Georgia (1991)
 ]
 .pull-right[
-&lt;img src="mccleskey.png" width="1848" style="display: block; margin: auto;" /&gt;
+&lt;img src="C:/Users/daviddl/OneDrive - University Of Oregon/Courses/EDUC/641/slides/mccleskey.png" width="1848" style="display: block; margin: auto;" /&gt;
 - Baldus, Pulaski &amp; Woodworth (1983). A comparative review of death sentences: An empirical study of the Georgia experience. *J. Crim Law.*
 
 ]
