--- a/slides/EDUC641_2_categ_2.html
+++ b/slides/EDUC641_2_categ_2.html
@@ -22,7 +22,7 @@ class: center, middle, inverse, title-slide
 
 # Roadmap
 
-&lt;img src="roadmap_2.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="C:/Users/daviddl/OneDrive - University Of Oregon/Courses/EDUC/641/slides/Roadmap_2.png" width="90%" style="display: block; margin: auto;" /&gt;
                                                           
 ---
 # A reminder of our motivating question
