Update dir structure

--- a/slides/EDUC641_1_intro.html
+++ b/slides/EDUC641_1_intro.html
@@ -22,7 +22,7 @@ class: center, middle, inverse, title-slide
 
 # Roadmap
 
-&lt;img src="C:/Users/daviddl/OneDrive - University Of Oregon/Courses/EDUC/641/slides/roadmap.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="roadmap.png" width="90%" style="display: block; margin: auto;" /&gt;
                                                           
 
 ---
