--- a/schedule.html
+++ b/schedule.html
@@ -1226,7 +1226,7 @@ $(document).ready(function () {
 <li>Install statistical software</li>
 </ul>
 <p>Readings: TBD</p>
-<p>Lecture slides: <a href=".slides/EDUC641_1_intro.html">html file</a></p>
+<p>Lecture slides: <a href="./slides/EDUC641_1_intro.html">html file</a></p>
 </div>
 <div id="week-2" class="section level3">
 <h3>Week 2</h3>
