--- a/schedule.html
+++ b/schedule.html
@@ -1269,15 +1269,21 @@ $(document).ready(function () {
 <p>Objectives:</p>
 <ul>
 <li>Describe the purpose and compute the following measures of central tendency: mean, median and mode</li>
-<li>Describe and summarize quantitative data that are continuous</li>
+<li>Describe and summarize quantitative data that are continuous
+<ul>
 <li>Includes computing the following measures of variability: quartiles, percentiles, inter-quartile range, range, variance and standard deviation</li>
 <li>Additionally describe conceptually principles of skewness and kurtosis</li>
-<li>Create visualizations of quantitative data that are continuous</li>
+</ul></li>
+<li>Create visualizations of quantitative data that are continuous
+<ul>
 <li>Includes constructing stem-and-leaf, box- and violin-plots</li>
+</ul></li>
 <li>Describe special features of a normal distribution</li>
 <li>Describe distribution of repeated sample statistics drawn from a population and how this is informative to hypothesis testing</li>
-<li>Apply CLT to understand whether mean value of a variable is different than a defined population value (when provided the SD of the variable)</li>
+<li>Apply CLT to understand whether mean value of a variable is different than a defined population value (when provided the SD of the variable)
+<ul>
 <li>Includes conducting single-sample t-test</li>
+</ul></li>
 </ul>
 </div>
 <div id="weeks-7---9" class="section level3">
