--- a/index.html
+++ b/index.html
@@ -254,10 +254,7 @@ $(document).ready(function () {
   <a href="assignments.html">Assignments</a>
 </li>
 <li>
-  <a href="exams.html">Exams</a>
-</li>
-<li>
-  <a href="https://github.com/uo-educ-quant/641">Repo</a>
+  <a href="https://github.com/uo-educ-quant/641">Course repo</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -273,7 +270,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Welcome to Fall 2021 EDUC 641.</p>
+<p>Welcome to EDUC 641 Inferences and Statistics in Education!</p>
 <p>This is the first course of the EDUC quantitative methods sequence. In this course, you will learn:</p>
 <p>Types of variables (manipulation of variable types; transformations)<br />
 Visualization of central tendency and variability<br />
