--- a/schedule.html
+++ b/schedule.html
@@ -254,10 +254,7 @@ $(document).ready(function () {
   <a href="assignments.html">Assignments</a>
 </li>
 <li>
-  <a href="exams.html">Exams</a>
-</li>
-<li>
-  <a href="https://github.com/uo-educ-quant/641">Repo</a>
+  <a href="https://github.com/uo-educ-quant/641">Course repo</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
