--- a/slides/continuous_l1.html
+++ b/slides/continuous_l1.html
@@ -69,27 +69,35 @@ Spread or Variability
 Summation (or sigma) notation is used to provide a concise expression for the sum of observations.
 
 `$$\sum_{i=i}^{n} x_{i}$$`
-
 ---
 # Central Tendency
 ## Mean
-* Represents the average, or the sum of all observations divided by the number of observations.
+* Represents the **average**, or the sum of all observations divided by the number of observations.
 * One of the most common forms of central tendency.
 
- `$$\mu = \frac{1}{n}{\sum_{i=i}^{n} x_{i}}$$`
+&gt; `$$\bar{X} = \frac{1}{n}{\sum_{i=i}^{n} X_{i}}$$`
  
-`$$mean(1, 3, 6, 8, 9) = \frac{1 + 3 + 6 + 8 + 9}{5} = 5.4$$`
+&gt; `$$mean(71, 73, 76, 78, 79) = \frac{71 + 73 + 76 + 78 + 79}{5} = 75.4$$`
 
+```r
+mean(who$life_expectancy)
+```
+
+```
+## [1] 71.63934
+```
+
+The mean national life expectancy in 2015 is **71.64** years
 ---
 # Central Tendency
 ## Median
-* The median represents the midpoint of the distribution.
-* Also called the 50th percentile of a distribution or 2nd quartile, meaning half of the observations are above the median and half are below.
+* Represents the **midpoint** of the distribution.
+* Also called the *50th percentile* of a distribution or *2nd quartile*, meaning half of the observations are above the median and half are below.
 * Particularly useful for describing the central tendency of skewed distributions (more on this later).
-* To find the median, arrange the scores in ascending order and identify the middle value. If there are two middle values (there is an even number of observations), use the average of the two.
+* To find the median, arrange the scores in ascending order and identify the middle value. If there are two middle values (even number of observations), use the average of the two.
 
-`$$median(1, 3, 6, 8, 9) = 6$$`
-
+&gt; `$$median(71, 73, 76, 78, 79) = 76$$`
+&gt; `$$median(71, 73, 76, 77, 78, 79) = 76.5$$`
 
 ```r
 median(who$life_expectancy)
@@ -99,22 +107,22 @@ median(who$life_expectancy)
 ## [1] 74
 ```
 
-The median national life expectancy in 2015 was **73.9** years.
+The median national life expectancy in 2015 was **74** years.
 
 ---
 # Central Tendency
 ## Mode
-The mode simply refers to the most frequent value in the data.
+The mode simply refers to the **most frequent value** in the data.
 
 What is the mode of the following data?
 
-&gt; 8, 9, 8, 7, 10, 9, 6, 4, 9, 8, 7, 8, 10, 9, 8, 6, 9, 7, 8, 8
+&gt; 78, 79, 78, 77, 80, 79, 76, 74, 79, 78, 77, 78, 80, 79, 78, 76, 79, 77, 78, 78
 
-Maybe we should sort the data first.
+It's easier if we sort the data first.
 
-&gt; 4, 6, 6, 7, 7, 7, **8, 8, 8, 8, 8, 8, 8,** 9, 9, 9, 9, 9, 10, 10
+&gt; 74, 76, 76, 77, 77, 77, **78, 78, 78, 78, 78, 78, 78,** 79, 79, 79, 79, 79, 80, 80
 
-8 is the most frequent value in the data. Therefore, the mode is 8.
+78 is the most frequent value in the data. Therefore, the mode is 78.
 
 ---
 # Central Tendency
@@ -137,21 +145,22 @@ In general, the mode is rarely used and is particularly vulnerable to idiosyncra
 
 * *But*, no distribution in the real world is perfectly normal and data can often have asymmetry or **skewness**.
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-4-1.png" style="display: block; margin: auto;" /&gt;
-
----
-# Kurtosis
 &lt;img src="continuous_l1_files/figure-html/unnamed-chunk-5-1.png" style="display: block; margin: auto;" /&gt;
 
+---
+# Distributional Shape
+## Kurtosis
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-6-1.png" style="display: block; margin: auto;" /&gt;
+
 
 ---
-Comparing Measures of Central Tendency
+# Central Tendency and Asymmetry 
 
 * &lt;span style="color: red;"&gt;Mean&lt;/span&gt;
 * &lt;span style="color: blue;"&gt;Median&lt;/span&gt;
 * &lt;span style="color: purple;"&gt;Mode&lt;/span&gt;
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-6-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-7-1.png" style="display: block; margin: auto;" /&gt;
 
 ---
 # Summarizing Data
@@ -160,7 +169,7 @@ Comparing Measures of Central Tendency
 * Here is a density plot of the WHO life expectancy data for 2015. 
 * How would you characterize the distribution?
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-7-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-8-1.png" style="display: block; margin: auto;" /&gt;
 
 &gt; * Is it approximately normal?
 &gt; * Is there severe skew?
@@ -172,7 +181,7 @@ Which measure of central tendency would you be inclined to use?
 ## Applied Example
 
 The distribution of life expectancy is approximately normal, though with a slightly negative skew.
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-8-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-9-1.png" style="display: block; margin: auto;" /&gt;
 
 The &lt;span style="color: red;"&gt;mean&lt;/span&gt; national life expectancy in 2015 was **71.62** years.
 
@@ -212,21 +221,21 @@ map(x, ~ ggplot(x, aes(.x)) +
 ## $pos_skew
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-10-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-11-1.png" style="display: block; margin: auto;" /&gt;
 
 ```
 ## 
 ## $neg_skew
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-10-2.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-11-2.png" style="display: block; margin: auto;" /&gt;
 
 ```
 ## 
 ## $central
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-10-3.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-11-3.png" style="display: block; margin: auto;" /&gt;
 
 ```r
 ggplot(x, aes(pos_skew)) +
@@ -234,14 +243,14 @@ ggplot(x, aes(pos_skew)) +
   geom_vline(xintercept = mean(pos_skew))
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-10-4.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-11-4.png" style="display: block; margin: auto;" /&gt;
 
 ```r
 ggplot(x, aes(neg_skew)) +
   geom_density()
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-10-5.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-11-5.png" style="display: block; margin: auto;" /&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
