--- a/slides/continuous_l1.html
+++ b/slides/continuous_l1.html
@@ -16,7 +16,7 @@ class: center, middle, inverse, title-slide
 
 # EDUC 641 Continuous Data
 ### Professor Name
-### 22 July, 2021
+### 27 July, 2021
 
 ---
 
@@ -78,6 +78,7 @@ Summation (or sigma) notation is used to provide a concise expression for the su
 &gt; `$$\bar{X} = \frac{1}{n}{\sum_{i=i}^{n} X_{i}}$$`
  
 &gt; `$$mean(71, 73, 76, 78, 79) = \frac{71 + 73 + 76 + 78 + 79}{5} = 75.4$$`
+
 
 ```r
 mean(who$life_expectancy)
@@ -177,6 +178,7 @@ In general, the mode is rarely used and is particularly vulnerable to idiosyncra
 
 Which measure of central tendency would you be inclined to use?
 ---
+
 # Summarizing Data
 ## Applied Example
 
@@ -189,22 +191,181 @@ The &lt;span style="color: blue;"&gt;median&lt;/span&gt; national life expectanc
 
 * The median appears to better capture the "center" of our distribution.
 ---
-# Variability
-* Variance
-* Standard Deviation
-* Interquartile Range
-* Range
+
+# Response Opportunity
+## Comparing Distributions
+
+These distributions are approximately normal and have the same mean (m = 100).
+
+How are they different?
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-10-1.png" style="display: block; margin: auto;" /&gt;
 
 ---
-# Variance
 
- *$$\(s^{2} = \frac{\sum_{i=i}^{n} x_{i}}{n} \)$$
+# Variability
+
+Knowing the central tendency of a distribution doesn't give us enough information.
+
+What if we want to know how much variation there is in life expectancy across nations?
+
+**Measures of Variability:**
+* Range
+* Interquartile Range
+* Variance
+* Standard Deviation
+
+---
+# Variability
+## Range
+
+* Represents the difference between the highest value and lowest value in the dataset.
+* Can provide a rough estimate of spread
+
+&gt; `$$range(71, 73, 76, 78, 79) = 79 - 71 = 8$$`
+
+* Very vulnerable to outliers. One observation can make a big difference!
+
+&gt; `$$range(55, 73, 76, 78, 79) = 79 - 55 = 24$$`
+
+### Applied Coding
+
+```r
+# Outputs the min and max
+range(who$life_expectancy)
+```
+
+```
+## [1] 51 88
+```
 
 
 ```r
-world &lt;- world %&gt;% 
-  distinct(region)
+max(who$life_expectancy) - min(who$life_expectancy)
 ```
+
+```
+## [1] 37
+```
+
+National average life expectancies in 2015 **ranged from 51 to 88**, for a total difference of **37 years**.
+
+---
+# Variability
+## Interquartile Range
+* Represents the difference between the 1st quartile (25th percentile) and the 3rd quartile (75th percentile).
+
+* **Percentile** refers to the percentage of observations that fall at or below that score. 
+
+* Summarizes the range of "average" scores in the dataset.
+
+### ADD QUANTILE PLOT
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-13-1.png" style="display: block; margin: auto;" /&gt;
+
+
+```r
+IQR(who$life_expectancy)
+```
+
+```
+## [1] 11
+```
+---
+# Variability
+## Variance
+* Represents the **average squared deviation** of each observation from the mean.
+
+ `$$s^{2} = \frac{\sum_{i=i}^{n} x_{i}}{n}$$`
+
+**Why do we square the average deviation?**
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-15-1.png" style="display: block; margin: auto;" /&gt;
+* Here are some national life expectancies centered around the mean. Their value represents their difference relative to the sample mean.
+
+* Some observations fall below the mean so their deviation is a negative value. If we took the average of our positive and negative deviations, we'd just get zero!
+
+---
+# Variance
+Since any number squared is positive, let's try squaring our deviations.
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-16-1.png" style="display: block; margin: auto;" /&gt;
+Now we can take the average of our squared deviations and get a non-zero value!
+---
+## Variance
+
+
+```r
+var(who$life_expectancy)
+```
+
+```
+## [1] 66.42965
+```
+
+Our variance (or average squared deviation) is approximately 66.43.
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-18-1.png" style="display: block; margin: auto;" /&gt;
+
+By itself, a variance of 66.43 is not very meaningful to us. It does not reflect the raw units of our original scale (it represents squared units).
+---
+# Variability
+## Standard Deviation
+
+* If we take the square root of our sample variance, we can summarize average deviations back on our raw scale. 
+
+* The standard deviation represents the **positive square root of the variance**.
+$$ s = \sqrt{s^2} $$
+
+```r
+sd(who$life_expectancy)
+```
+
+```
+## [1] 8.150439
+```
+
+The standard deviation of life expectancy in 2015 was approximately 8.15 *years*.
+---
+# Variability
+## Variance and Standard Deviation
+
+* Because variance and standard deviations are calculated from the mean, they are sensitive to skew and outliers (just like the mean).
+
+WORTH ADDING VISUALS? (PROBABLY NOT THESE)
+
+```r
+ggplot(x, aes(x = pos_skew)) +
+  geom_density(adjust = 3) +
+  geom_vline(xintercept = mean(x$pos_skew), color = "red", linetype = "dotted") +
+  geom_vline(xintercept = mean(x$pos_skew) - sd(x$pos_skew), color = "cornflowerblue") +
+  geom_vline(xintercept = mean(x$pos_skew) + sd(x$pos_skew), color = "cornflowerblue")
+```
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-20-1.png" style="display: block; margin: auto;" /&gt;
+
+```r
+ggplot(x, aes(x = neg_skew)) +
+  geom_density(adjust = 3) +
+  geom_vline(xintercept = mean(x$neg_skew), color = "red", linetype = "dotted") +
+  geom_vline(xintercept = mean(x$neg_skew) - sd(x$neg_skew), color = "cornflowerblue") +
+  geom_vline(xintercept = mean(x$neg_skew) + sd(x$neg_skew), color = "cornflowerblue")
+```
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-20-2.png" style="display: block; margin: auto;" /&gt;
+
+```r
+ggplot(x, aes(x = central)) +
+  geom_density(adjust = 3) +
+  geom_vline(xintercept = mean(x$central), color = "red", linetype = "dotted") +
+  geom_vline(xintercept = mean(x$central) - sd(x$central), color = "cornflowerblue") +
+  geom_vline(xintercept = mean(x$central) + sd(x$central), color = "cornflowerblue")
+```
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-20-3.png" style="display: block; margin: auto;" /&gt;
+---
+## Visualizing Variance
+ADD CONTENT ON BOXPLOTS, ETC.
 
 ---
 
@@ -221,21 +382,21 @@ map(x, ~ ggplot(x, aes(.x)) +
 ## $pos_skew
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-11-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-21-1.png" style="display: block; margin: auto;" /&gt;
 
 ```
 ## 
 ## $neg_skew
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-11-2.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-21-2.png" style="display: block; margin: auto;" /&gt;
 
 ```
 ## 
 ## $central
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-11-3.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-21-3.png" style="display: block; margin: auto;" /&gt;
 
 ```r
 ggplot(x, aes(pos_skew)) +
@@ -243,14 +404,18 @@ ggplot(x, aes(pos_skew)) +
   geom_vline(xintercept = mean(pos_skew))
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-11-4.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-21-4.png" style="display: block; margin: auto;" /&gt;
 
 ```r
 ggplot(x, aes(neg_skew)) +
   geom_density()
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-11-5.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-21-5.png" style="display: block; margin: auto;" /&gt;
+
+---
+# Sampling Distributions
+```
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
