cont dataset and assignment 3

--- a/assignments.html
+++ b/assignments.html
@@ -299,7 +299,7 @@ $(document).ready(function () {
 <li><p>Create visualizations of categorical data</p></li>
 </ul>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment01.html">html file</a></p>
+<p>Download: <a href="./assignments/assignment01.html">html file</a>; <a href="./data/cat.csv">cat.csv dataset</a></p>
 </div>
 <div id="assignment-2" class="section level4">
 <h4>3.2. Assignment 2</h4>
@@ -313,11 +313,18 @@ $(document).ready(function () {
 <li><p>Interpret and report the results of a contingency-table analysis and a statistical inference from a chi-squared statistic</p></li>
 </ul>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment02.html">html file</a></p>
+<p>Download: <a href="./assignments/assignment02.html">html file</a>; <a href="./data/cat.csv">cat.csv dataset</a></p>
 </div>
 <div id="assignment-3" class="section level4">
 <h4>3.3. Assignment 3</h4>
-<p>Continuous data 1: correlation and t-tests</p>
+<p>Continuous data 1: summarizing and displaying continuous data</p>
+<p>Objectives of this assignment</p>
+<ul>
+<li><p>Describe and summarize continuous data</p></li>
+<li><p>Create visualizations of continuous data</p></li>
+</ul>
+<p>Deadline: TBD</p>
+<p>Download: <a href="./assignments/assignment03.html">html file</a>; <a href="./data/cont.csv">cont.csv dataset</a></p>
 </div>
 <div id="assignment-4" class="section level4">
 <h4>3.4. Assignment 4</h4>
