--- a/schedule.html
+++ b/schedule.html
@@ -278,7 +278,8 @@ $(document).ready(function () {
 <li>Install statistical software</li>
 </ul>
 <p>Readings: TBD</p>
-<p>Lecture slides: <a href="./slides/EDUC641_1_intro.html">html file</a>; R Tutorial slides: <a href="./slides/claire.html">html file</a></p>
+<p>Lecture slides: <a href="./slides/EDUC641_1_intro.html">html file</a></p>
+<p>R Tutorial slides: <a href="./slides/tutorial.html">html file</a></p>
 </div>
 <div id="week-2" class="section level3">
 <h3>Week 2</h3>
@@ -292,10 +293,18 @@ $(document).ready(function () {
 <li>Write R scripts to conduct these analyses</li>
 </ul>
 <p>Readings: TBD</p>
-<p>Assignment: Due TBD; <a href="./assignments/assignment01.html">html file</a>, <a href="./data/cat.csv">dataset</a></p>
-<p>Lecture slides: <a href="./slides/EDUC641_2_categ_1.html">html file</a></p>
-<p>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a>, <a href="./data/deathpenalty.csv">codebook</a></p>
-<p>R script: <a href="./slides/EDUC641_2_code.R">R script</a></p>
+<p>Lecture:</p>
+<ul>
+<li>Slides: <a href="./slides/EDUC641_2_categ_1.html">html file</a></li>
+<li>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a>, <a href="./data/deathpenalty.csv">codebook</a></li>
+<li>R script: <a href="./slides/EDUC641_2_code.R">R script</a></li>
+</ul>
+<p>Assignment 1:</p>
+<ul>
+<li>Due TBD;</li>
+<li><a href="./assignments/assignment01.html">html file</a></li>
+<li><a href="./data/cat.csv">cat.csv dataset</a></li>
+</ul>
 </div>
 <div id="week-3---4" class="section level3">
 <h3>Week 3 - 4</h3>
@@ -311,8 +320,18 @@ $(document).ready(function () {
 <li>Interpret and report the results of a contingency-table analysis and a statistical inference from a chi-squared statistic</li>
 </ul>
 <p>Readings: TBD</p>
-<p>Assignment: Due TBD; <a href="./assignments/assignment02.html">html file</a>, <a href="./data/cat.csv">dataset</a></p>
-<p>Lecture slides: <a href="./slides/EDUC641_2_categ_2.html">html file</a>, <a href="./slides/EDUC641_2_categ_2.Rmd">Rmd file</a></p>
+<p>Lecture:</p>
+<ul>
+<li>Slides: <a href="./slides/EDUC641_2_categ_2.html">html file</a></li>
+<li>Data:</li>
+<li>R Script:</li>
+</ul>
+<p>Assignment 2:</p>
+<ul>
+<li>Due TBD;</li>
+<li><a href="./assignments/assignment02.html">html file</a></li>
+<li><a href="./data/cat.csv">cat.csv dataset</a></li>
+</ul>
 </div>
 <div id="weeks-5---7" class="section level3">
 <h3>Weeks 5 - 7</h3>
@@ -337,10 +356,21 @@ $(document).ready(function () {
 <li>Includes conducting single-sample t-test</li>
 </ul></li>
 </ul>
+<p>Readings: TBD</p>
+<p>Assignment 3:</p>
+<ul>
+<li>Due TBD</li>
+<li><a href="./assignments/assignment03.html">html file</a></li>
+<li><a href="./data/cont.csv">cont.csv</a></li>
+</ul>
+<p>Lecture slides:</p>
 </div>
 <div id="weeks-7---9" class="section level3">
 <h3>Weeks 7 - 9</h3>
 <p>Topic: Describing relationships between continuous data</p>
+<p>Readings: TBD</p>
+<p>Assignment 4: Due TBD; <a href="./assignments/assignment04.html">html file</a>, <a href="./data/cont.csv">cont.csv</a></p>
+<p>Lecture slides:</p>
 </div>
 
 
