--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -170,13 +170,13 @@ pre code {
 
 
 <div id="general-guidelines" class="section level3">
-<h3>1. General Guidelines</h3>
+<h3>General Guidelines</h3>
 <ul>
 <li>The purpose of this assignment is to practice the concepts and vocabulary we have been modeling in class and implement some of the techniques we have learned. You may work on your own or collaborate with one (1) partner. Please make sure that you engage in a a full, fair and mutually-agreeable collaboration if you do choose to collaborate. If you do collaborate, you should plan, execute and write-up your analyses together, not simply divide the work. Please make sure to indicate clearly when your work is joint and any other individual or resource (outside of class material) you consulted in your responses.</li>
 </ul>
 </div>
 <div id="submission-requirements" class="section level3">
-<h3>2. Submission Requirements</h3>
+<h3>Submission Requirements</h3>
 <p>Please upload below two files on Canvas before TBD time:</p>
 <ul>
 <li>An .html or .pdf file that includes both -
@@ -189,14 +189,14 @@ pre code {
 </ul>
 </div>
 <div id="objectives-of-this-assignment" class="section level3">
-<h3>3. Objectives of this assignment</h3>
+<h3>Objectives of this assignment</h3>
 <ul>
 <li><p>Describe and summarize categorical data</p></li>
 <li><p>Create visualizations of categorical data</p></li>
 </ul>
 </div>
 <div id="data-background" class="section level3">
-<h3>4. Data Background</h3>
+<h3>Data Background</h3>
 <p>The dataset we’ll be using in this assignment is drawn from the NCRECE <a href="https://www.icpsr.umich.edu/web/ICPSR/studies/34848">Teacher Professional Development Study (PDS)</a> data. This professional development study was a randomized controlled evaluation of two forms of professional development (PD) - coursework (phase 1) and consultancy (phase 2) - delivered to about 490 early childhood education teachers across the nation. These PD supports aimed to improve teachers’ implementation of language/literacy activities and interactions with children, as well as promote gains in children’s social and academic development.</p>
 <p>While the primary goals of the PD intervention were to improve language and literacy skills, researchers theorized that if teachers became more effective at teaching literacy, they might also improve the quality of their relationships with their students and families. In turn, these improved relationships might lead to other positive effects of the PD intervention. One pair of researchers (<a href="https://doi.org/10.1080/19345747.2019.1634170">Hanno and Gonzalez, 2020</a>) wanted to learn whether the PD intervention improved children’s attendance. The next two assignments will ask you to answer just this question: did the coursework and consultancy PD intervention improve student attendance?</p>
 <p><strong>Sample</strong>. Our dataset is student-level data for 942 preschool children, which is the same sample used in the original Hanno and Gonzalez (2020) paper. The authors test several approaches to compute the outcome variable, chronic absenteeism, since some key information on full year absent days is not publicly available. For simplifying reasons, the approach we use in our sample is one from the robustness check rather the one used in the main paper.</p>
@@ -211,21 +211,21 @@ pre code {
 </ul>
 </div>
 <div id="assignment-details" class="section level3">
-<h3>5. Assignment Details</h3>
+<h3>Assignment Details</h3>
 <div id="read-in-the-dataset" class="section level4">
-<h4>5.1. Read in the dataset</h4>
-<p>Open your RStudio, create a project and save it. Go to the root directory of the project and create a folder named “data”. Download the dataset from the course website then store it in the folder “data”. Create an Rmd/R file in the project root directory. Then…</p>
+<h4>1. Read in the dataset</h4>
+<p>Open your RStudio, create a project and save it. Go to the root directory of the project and create a folder named “data”. Download the <a href="./data/cat.csv">cat.csv dataset</a> and store it in the folder “data”. Create an Rmd/R file in the project root directory. Then…</p>
 <p>Read the data into your R environment. You do not need to include this response in your memo; only in your code.</p>
 </div>
 <div id="understand-the-structure-of-the-data" class="section level4">
-<h4>5.2. Understand the structure of the data</h4>
-<p>5.2.1. Write your own code to view the dataset and write 3-4 sentences about the structure of the data (how many variables are there, what type is each variable, how many rows/observations, etc.) with a focus on the two key variables, <em>treat</em> and <em>absenteeism</em> (type, observations, etc.).</p>
-<p>5.2.2. Write your own code to transform the variables, <em>treat</em>, <em>absenteeism</em>, and <em>cgender</em> into factor and label them consistently with the data background information above.</p>
+<h4>2. Understand the structure of the data</h4>
+<p>2.1. Write your own code to view the dataset and write 3-4 sentences about the structure of the data (how many variables are there, what type is each variable, how many rows/observations, etc.) with a focus on the two key variables, <em>treat</em> and <em>absenteeism</em> (type, observations, etc.).</p>
+<p>2.2. Write your own code to transform the variables, <em>treat</em>, <em>absenteeism</em>, and <em>cgender</em> into factor and label them consistently with the data background information above.</p>
 </div>
 <div id="describe-and-summarize-the-two-key-variables" class="section level4">
-<h4>5.3. Describe and summarize the two key variables</h4>
-<p>5.3.1. How many students were in the treatment group? Control group? Provide your response and create a table AND a figure to demonstrate your answer. <em>Make sure to label all parts of your figure</em></p>
-<p>5.3.2. How many <strong>and what proportion</strong> of students were chronically absent? Provide your response and create a table AND a figure to demonstrate your answer. Does this seem like a large or small proportion? <em>Make sure to label all parts of your figure</em></p>
+<h4>3. Describe and summarize the two key variables</h4>
+<p>3.1. How many students were in the treatment group? Control group? Provide your response and create a table AND a figure to demonstrate your answer. <em>Make sure to label all parts of your figure</em></p>
+<p>3.2. How many <strong>and what proportion</strong> of students were chronically absent? Provide your response and create a table AND a figure to demonstrate your answer. Does this seem like a large or small proportion? <em>Make sure to label all parts of your figure</em></p>
 </div>
 </div>
 
