--- a/assignments/assignment03.html
+++ b/assignments/assignment03.html
@@ -223,10 +223,10 @@ pre code {
 </div>
 <div id="descriptive-statistics-of-the-outcome-variable" class="section level4">
 <h4>3. Descriptive statistics of the outcome variable</h4>
-<p>3.1. Central tendency.</p>
+<p>3.1. Central tendency</p>
 <p>3.1.1 What are the mean, median, and mode of the outcome variable, <em>vocabulary</em>? Interpret the statistical meanings of these measures.</p>
 <p>3.1.2. Create a binned frequency table (suggested bin width = 5) for <em>vocabulary</em>. The create a plot to show the distribution of <em>vocabulary</em> and make sure to label the x and y axis. Is it normally distributed? If not, describe how and how much the distribution is skewed. Did you notice any outliers?</p>
-<p>3.2. Variability.</p>
+<p>3.2. Variability</p>
 <p>3.2.1. What are the variance and standard deviation of <em>vocabulary</em>? Interpret the statistical meanings of these measures.</p>
 <p>3.2.2. Moreover, list the quartiles, percentiles, interquartile range, and range of <em>vocabulary</em>.</p>
 </div>
@@ -236,7 +236,7 @@ pre code {
 <p>4.1.1. Using the mean and standard deviation of <em>vocabulary</em>, create a normal distribution plot (same type with the previous one) and add to your previous plot.</p>
 <p>4.1.2. What are the statistical meanings of this new plot?</p>
 <p>4.1.3. Compare these two distributions and interpret what you have observed.</p>
-<p>4.1.4. If you assume <em>vocabulary</em> is normally distributed, specify your null hypothesis and (2-tailed) alternative hypothesis for the single-samle t-test.</p>
+<p>4.1.4. Despite whether <em>vocabulary</em> is normally distributed, you wand to assume normal distribution in your future analysis. At this point, please specify your null hypothesis and (2-tailed) alternative hypothesis for the single-samle t-test.</p>
 </div>
 </div>
 
